--- a/index.html
+++ b/index.html
@@ -6,9 +6,8 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
-  <link rel="stylesheet" href="./index.css">
-  <link rel="stylesheet" href="./public.css">
-  <script src="./script.js"></script>
+  <link href="./index.css" rel="stylesheet">
+  <link href="./public.css" rel="stylesheet">
 </head>
 
 <body>
@@ -21,13 +20,15 @@
         穷光蛋
       </div>
     </header>
-    <section class="chef">
-    </section>
+    <div class="chefPlace">
+      <object data="./chef.html" width="100%" height="40%" name="chef" style="background-color:white;z-index: 1;"></object>
+    </div>
     <section class="consumer">
+      <object></object>
     </section>
     <footer class="waiting">
     </footer>
   </main>
+  <script src="./script.js"></script>
 </body>
-
 </html>
