--- a/chef.html
+++ b/chef.html
@@ -14,6 +14,23 @@
   <section class="chefList">
     <div class="chef">
       <img src="./asset/chef.png">
+      <div class="progressBar">
+      </div>
+    </div>
+    <div class="chef">
+      <img src="./asset/chef.png">
+      <div class="progressBar">
+      </div>
+    </div>
+    <div class="chef">
+      <img src="./asset/chef.png">
+      <div class="progressBar">
+      </div>
+    </div>
+    <div class="chef">
+      <img src="./asset/chef.png">
+      <div class="progressBar">
+      </div>
     </div>
   </section>
   <script src="./chef.js"></script>
