--- a/index.html
+++ b/index.html
@@ -2,33 +2,391 @@
 <html lang="en">
 
 <head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
-  <link href="./index.css" rel="stylesheet">
-  <link href="./public.css" rel="stylesheet">
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>餐厅游戏</title>
+    <link href="index.css" rel="stylesheet">
 </head>
 
 <body>
-  <main>
-    <header>
-      <div class="time">
-        W1 D1
-      </div>
-      <div class="cash">
-        穷光蛋
-      </div>
-    </header>
-    <div class="chefPlace">
-      <object data="./chef.html" width="100%" height="40%" name="chef" style="background-color:white;z-index: 1;"></object>
-    </div>
-    <section class="consumer">
-      <object></object>
+    <main>
+        <header>
+            <div class="time">
+                W1 D1
+            </div>
+            <div class="cash">
+                穷光蛋
+            </div>
+        </header>
+        <div class="chefPlace">
+            <div class='small-inline-Box'><!--inline-Box-->
+                <div class='chefBox' id='chefBox1'>
+                    <div class='addCookerImgBox'>
+                        <img class='addCookerImg' src='asset/chef.png' alt='cooker'>
+                    </div>
+                    <!-- 做菜进度条 -->
+                    <div class='cookingBar'>
+                        <div class='inline-Bar1'> <!--inline-Bar2-->
+                            <div class='shade'></div>
+                            <p class='dish'>UI炖UI</p>
+                        </div>
+                    </div>
+                    <!-- 递盘子 -->
+                    <img class='plateImg' src='asset/food.png' alt='plate'>
+                    <!-- 删除厨师 -->
+                    <div class="del-chef">
+                        <p>×</p>
+                    </div>
+                    <!-- 添加厨师 -->
+                    <div class="save-chef">
+                        <p>＋</p>
+                    </div>
+                </div>
+                <div class='chefBox' id='chefBox2'>
+                    <div class='addCookerImgBox'>
+                        <img class='addCookerImg' src='asset/chef.png' alt='cooker'>
+                    </div>
+                    <!-- 做菜进度条 -->
+                    <div class='cookingBar'>
+                        <div class='inline-Bar1'> <!--inline-Bar2-->
+                            <div class='shade'></div>
+                            <p class='dish'>UI炖UI</p>
+                        </div>
+                    </div>
+                    <img class='plateImg' src='asset/food.png' alt='plate'>
+                    <!-- 删除厨师 -->
+                    <div class="del-chef">
+                        <p>×</p>
+                    </div>
+                    <!-- 添加厨师 -->
+                    <div class="save-chef">
+                        <p>＋</p>
+                    </div>
+                </div>
+                <div class='chefBox' id='chefBox3'>
+                    <div class='addCookerImgBox'>
+                        <img class='addCookerImg' src='asset/chef.png' alt='cooker'>
+                    </div>
+                    <!-- 做菜进度条 -->
+                    <div class='cookingBar'>
+                        <div class='inline-Bar1'> <!--inline-Bar2-->
+                            <div class='shade'></div>
+                            <p class='dish'>UI炖UI</p>
+                        </div>
+                    </div>
+                    <img class='plateImg' src='asset/food.png' alt='plate'>
+                    <!-- 删除厨师 -->
+                    <div class="del-chef">
+                        <p>×</p>
+                    </div>
+                    <!-- 添加厨师 -->
+                    <div class="save-chef">
+                        <p>＋</p>
+                    </div>
+                </div>
+                <div class='chefBox' id='chefBox4'>
+                    <div class='addCookerImgBox'>
+                        <img class='addCookerImg' src='asset/chef.png' alt='cooker'>
+                    </div>
+                    <!-- 做菜进度条 -->
+                    <div class='cookingBar'>
+                        <div class='inline-Bar1'> <!--inline-Bar2-->
+                            <div class='shade'></div>
+                            <p class='dish'>UI炖UI</p>
+                        </div>
+                    </div>
+                    <img class='plateImg' src='asset/food.png' alt='plate'>
+                    <!-- 删除厨师 -->
+                    <div class="del-chef">
+                        <p>×</p>
+                    </div>
+                    <!-- 添加厨师 -->
+                    <div class="save-chef">
+                        <p>＋</p>
+                    </div>
+                </div>
+                <div class='chefBox' id='chefBox5'>
+                    <div class='addCookerImgBox'>
+                        <img class='addCookerImg' src='asset/chef.png' alt='cooker'>
+                    </div>
+                    <!-- 做菜进度条 -->
+                    <div class='cookingBar'>
+                        <div class='inline-Bar1'> <!--inline-Bar2-->
+                            <div class='shade'></div>
+                            <p class='dish'>UI炖UI</p>
+                        </div>
+                    </div>
+                    <img class='plateImg' src='asset/food.png' alt='plate'>
+                    <!-- 删除厨师 -->
+                    <div class="del-chef">
+                        <p>×</p>
+                    </div>
+                    <!-- 添加厨师 -->
+                    <div class="save-chef">
+                        <p>＋</p>
+                    </div>
+                </div>
+                <div class='chefBox' id='chefBox6'>
+                    <div class='addCookerImgBox'>
+                        <img class='addCookerImg' src='asset/chef.png' alt='cooker'>
+                    </div>
+                    <!-- 做菜进度条 -->
+                    <div class='cookingBar'>
+                        <div class='inline-Bar1'> <!--inline-Bar2-->
+                            <div class='shade'></div>
+                            <p class='dish'>UI炖UI</p>
+                        </div>
+                    </div>
+                    <img class='plateImg' src='asset/food.png' alt='plate'>
+                    <!-- 删除厨师 -->
+                    <div class="del-chef">
+                        <p>×</p>
+                    </div>
+                    <!-- 添加厨师 -->
+                    <div class="save-chef">
+                        <p>＋</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+        </div>
+        <div class="consumerPlace">
+            <div class="grid-container">
+                <div class="grid-item">
+                    <div class="seat"></div>
+                    <div class="orderdishes">
+                        <p class="orderdish">UI炖UI</p>
+                        <p class="orderdish">UI炖UI</p>
+                        <p class="orderdish">UI炖UI</p>
+                    </div>
+                </div>
+                <div class="grid-item">
+                    <div class="seat"></div>
+                    <div class="orderdishes">
+                        <p class="orderdish">UI炖UI</p>
+                        <p class="orderdish">UI炖UI</p>
+                        <p class="orderdish">UI炖UI</p>
+                    </div>
+                </div>
+                <div class="grid-item">
+                    <div class="seat"></div>
+                    <div class="orderdishes">
+                        <p class="orderdish">UI炖UI</p>
+                        <p class="orderdish">UI炖UI</p>
+                        <p class="orderdish">UI炖UI</p>
+                    </div>
+                </div>
+                <div class="grid-item">
+                    <div class="seat"></div>
+                    <div class="orderdishes">
+                        <p class="orderdish">UI炖UI</p>
+                        <p class="orderdish">UI炖UI</p>
+                        <p class="orderdish">UI炖UI</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <footer class="waitingPlace">
+            <div class='waitCustomerBox' id='waitCustomerBox0'> <!--id指排队的第几位客人-->
+                <div class='inline-Box-eating4'>  
+                    <div class='customer-shade'></div>
+                </div>
+                <div class='cookingBar'>
+                    <div class='inline-Bar5'>
+                        <div class='shade'></div>
+                        <p class='wait'>等待中</p>
+                    </div>
+                </div>
+                <img class='customerImg' src='asset/customer1.png' alt='custmoer'>
+            </div>
+            <div class='waitCustomerBox' id='waitCustomerBox1'>
+                <div class='inline-Box-eating4'>  
+                    <div class='customer-shade'></div>
+                </div>
+                <div class='cookingBar'>
+                    <div class='inline-Bar5'>
+                        <div class='shade'></div>
+                        <p class='wait'>等待中</p>
+                    </div>
+                </div>
+                <img class='customerImg' src='asset/customer2.png' alt='custmoer'>
+            </div>
+            <div class='waitCustomerBox' id='waitCustomerBox2'>
+                <div class='inline-Box-eating4'>  
+                    <div class='customer-shade'></div>
+                </div>
+                <div class='cookingBar'>
+                    <div class='inline-Bar5'>
+                        <div class='shade'></div>
+                        <p class='wait'>等待中</p>
+                    </div>
+                </div>
+                <img class='customerImg' src='asset/customer3.png' alt='custmoer'>
+            </div>
+            <div class='waitCustomerBox' id='waitCustomerBox3'>
+                <div class='inline-Box-eating4'>  
+                    <div class='customer-shade'></div>
+                </div>
+                <div class='cookingBar'>
+                    <div class='inline-Bar5'>
+                        <div class='shade'></div>
+                        <p class='wait'>等待中</p>
+                    </div>
+                </div>
+                <img class='customerImg' src='asset/customer4.png' alt='custmoer'>
+            </div>
+            <div class='waitCustomerBox' id='waitCustomerBox4'>
+                <div class='inline-Box-eating4'>  
+                    <div class='customer-shade'></div>
+                </div>
+                <div class='cookingBar'>
+                    <div class='inline-Bar5'>
+                        <div class='shade'></div>
+                        <p class='wait'>等待中</p>
+                    </div>
+                </div>
+                <img class='customerImg' src='asset/customer5.png' alt='custmoer'>
+            </div>
+            <div class='waitCustomerBox' id='waitCustomerBox5'>
+                <div class='inline-Box-eating4'>  
+                    <div class='customer-shade'></div>
+                </div>
+                <div class='cookingBar'>
+                    <div class='inline-Bar5'>
+                        <div class='shade'></div>
+                        <p class='wait'>等待中</p>
+                    </div>
+                </div>
+                <img class='customerImg' src='asset/customer6.png' alt='custmoer'>
+            </div>
+        </footer>
+    </main>
+    <!-- 开始游戏启动部分 -->
+    <section class='gameBegin'>
+        <div class='inline-Box'>
+            <h1>WebMOOC餐厅开业啦!</h1>
+            <p class='introduction'>WebMOOC餐厅即将开业，请认真经营你的餐厅吧经营餐厅需要做好下面几件事情! 加油!</p>
+            <div class='things'>
+                <p>招聘厨师</p>
+                <p>迎接客人</p>
+                <p>烹饪美食</p>
+            </div>
+            <div class='play'>
+                <button class='inline-Box'>
+                    <div class='shade'></div>
+                    <p>开始经营吧</p>
+                </button>
+            </div>
+        </div>
     </section>
-    <footer class="waiting">
-    </footer>
-  </main>
-  <script src="./script.js"></script>
+    <!-- 点餐部分 -->
+    <section class='menu'>
+        <div class='inline-Box'>
+            <div class='customerBox'>
+                <div class='inline-Box-eating4' id='inline-customerBox1'>
+                    <div class='customer-shade'></div>
+                </div>
+                <img class='customerImg' src='asset/customer1.png' alt='custmoer'>
+            </div>
+            <p class='orderDishes'><span class='customerName'>QIAN</span>正在点菜，已点 <span class='totalPrice'></span> 元的菜
+            </p>
+            <div class='menu-border'>
+                <div class='inline-border'>
+                    <p class='allDishes'>凉菜（二选一，可不点）</p>
+                    <p class='dishes'><input class='check' type="checkbox" id='coldDishe1'>凉拌SAN<span>...............￥
+                            6</span></p>
+                    <p class='dishes'><input class='check' type="checkbox" id='coldDishe2'>冷切DOM<span>...............￥
+                            4</span></p>
+                    <p class='allDishes'>主菜（五选一，必点）</p>
+                    <p class='dishes'><input class='check' type="checkbox" id='mainDishe1'>UL炖LI<span>...............￥
+                            12</span></p>
+                    <p class='dishes'><input class='check' type="checkbox" id='mainDishe2'>红烧HEAD<span>...............￥
+                            15</span></p>
+                    <p class='dishes'><input class='check' type="checkbox"
+                            id='mainDishe3'>酥炸ECharts<span>...............￥ 18</span></p>
+                    <p class='dishes'><input class='check' type="checkbox" id='mainDishe4'>炭烤CSS<span>...............￥
+                            16</span></p>
+                    <p class='dishes'><input class='check' type="checkbox" id='mainDishe5'>清蒸DIV<span>...............￥
+                            12</span></p>
+                    <p class='allDishes'>饮品（二选一，可不点）</p>
+                    <p class='dishes'><input class='check' type="checkbox" id='drink1'>鲜榨flex<span>...............￥
+                            5</span></p>
+                    <p class='dishes'><input class='check' type="checkbox" id='drink2'>小程序奶茶<span>...............￥
+                            6</span></p>
+                </div>
+            </div>
+            <div class='orderCompleteBorder'>
+                <button class='inline-Box'>
+                    <p>点好了，快点上菜</p>
+                </button>
+            </div>
+            <div class='noeat'>
+                <button class='inline-Box'>
+                    <p>不吃了</p>
+                </button>
+            </div>
+        </div>
+    </section>
+    <!-- 招聘厨师部分 -->
+    <section class='buyChef'>
+        <div class='inline-Box'>
+            <h1>招聘新厨师</h1>
+            <p>招聘一名新厨师可以帮你更快地为顾客烹饪菜肴，</p>
+            <p>增加餐厅收入。你最多可以拥有六名厨师。</p>
+            <p>但每个厨师每周需要你支付工资￥100</p>
+            <p>请问你确认新招聘一名厨师吗?</p>
+            <div class='confirmRecruitment'>
+                <button class='inline-Box'>
+                    <div class='shade'></div>
+                    <p>是的，确认招聘</p>
+                </button>
+            </div>
+            <div class='noRecruitment'>
+                <button class='inline-Box'>
+                    <div class='shade'></div>
+                    <p>先不了</p>
+                </button>
+            </div>
+        </div>
+    </section>
+    <!-- 解雇厨师部分 -->
+    <section class='fryChef'>
+        <div class='inline-Box'>
+            <h1>解雇厨师</h1>
+            <p class="one">解雇当前闲置的厨师可以帮你节省成本。</p>
+            <p>解雇时会按厨师本周已经工作的日子结算工资</p>
+            <p>并会赔偿一周工资作为解约金。</p>
+            <p>解雇当前厨师结算工资及解约金需要付出￥140</p>
+            <div class='confirmFry'>
+                <button class='inline-Box'>
+                    <div class='shade'></div>
+                    <p>是的，确认解雇</p>
+                </button>
+            </div>
+            <div class='noFry'>
+                <button class='inline-Box'>
+                    <div class='shade'></div>
+                    <p>先不了</p>
+                </button>
+            </div>
+            <div class='moneyAlert'>
+                <p>你的金额已经不足支付解约金</p>
+            </div>
+        </div>
+    </section>
+    <!-- 警告部分 -->
+    <div class='needAlert'>
+        <p>餐厅目前有空位，赶紧点击等位客人头像让客人入座点餐吧</p>
+    </div>
+    <div class='finishAlert'>
+        <p>QIAN完成点餐，等候用餐</p>
+        <p>疯狂点击厨师头像可以加速做菜</p>
+    </div>
+    <div class='chefAlert'>
+        <p>招聘厨师成功！您已经有<span id='chefNumber'> 5 </span>名厨师</p>
+    </div>
+    <script src="index.js"></script>
 </body>
+
 </html>
