厨师动态添加样式完善

--- a/index.html
+++ b/index.html
@@ -22,20 +22,7 @@
     <button>测试</button>
     <div class="chefPlace">
       <div class='small-inline-Box'><!--inline-Box-->
-        <div class='chefBox' id='chefBox1'>
-          <img class='addCookerImg' src='asset/chef.png' alt='cooker'>
-          <!-- 做菜进度条 -->
-          <div class='cookingBar'>
-              <div class='shade'></div>
-              <p class='dish'>UI炖UI</p>
-          </div>
-          <!-- 递盘子 -->
-          <img class='plateImg' src='asset/food.png' alt='plate'>
-          <!-- 删除厨师 -->
-          <p class="del-chef">×</p>
-          <!-- 添加厨师 -->
-          <p class="save-chef">＋</p>
-        </div>
+<!-- 这个位置是放厨师的 -->
       </div>
     </div>
     </div>
