厨师功能基本完善

--- a/index.html
+++ b/index.html
@@ -19,10 +19,28 @@
         穷光蛋
       </div>
     </header>
-    <button>测试</button>
+    <button>添加</button>
+    <button>烧菜</button>
     <div class="chefPlace">
       <div class='small-inline-Box'><!--inline-Box-->
-<!-- 这个位置是放厨师的 -->
+        <!-- 这个位置是放厨师的 -->
+        <!-- 这些注释已经不需要,但是可以在调试的时候放开 -->
+        <!-- <div class='chefBox' id='chefBox1'>
+          <img class='addCookerImg' src='asset/chef.png' alt='cooker'> -->
+          <!-- 做菜进度条 -->
+          <!-- <div class='cookingBar'>
+            <div class='shade'>
+              <p class='dish'>UI炖UI</p>
+            </div>
+          </div> -->
+             <!-- 递盘子 -->
+          <!-- <img class='plateImg' src='asset/food.png' alt='plate'> -->
+          <!-- 删除厨师 -->
+          <!-- <p class="del-chef">×</p> -->
+          <!-- 添加厨师 -->
+          <!-- <p class="save-chef">＋</p>
+        </div>  -->
+
       </div>
     </div>
     </div>
@@ -67,6 +85,11 @@
         <div class='inline-Box-eating4'>
           <div class='customer-shade'></div>
         </div>
+        <!-- 改成这个就不会错
+        <div class='shade'>
+          <p class='wait'>等待中</p>
+        </div>
+        -->
         <div class='cookingBar'>
           <div class='inline-Bar5'>
             <div class='shade'></div>
