--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
 </head>
 
 <body>
-  <main>
+  <div class="blackShadow"></div>
+  <main id="main">
     <header>
       <div class="time">
         W1 D1
@@ -284,7 +285,7 @@
   <div class='chefAlert'>
     <p>招聘厨师成功！您已经有<span id='chefNumber'> 5 </span>名厨师</p>
   </div>
-  <script src="index.js"></script>
+  <script src="index1.js"></script>
 </body>
 
 </html>
