--- a/index.html
+++ b/index.html
@@ -285,7 +285,7 @@
   <div class='chefAlert'>
     <p>招聘厨师成功！您已经有<span id='chefNumber'> 5 </span>名厨师</p>
   </div>
-  <script src="index1.js"></script>
+  <script src="index.js"></script>
 </body>
 
 </html>
