顾客等待队列初步完成

--- a/index.html
+++ b/index.html
@@ -83,84 +83,18 @@
       </div>
     </div>
     <footer class="waitingPlace">
-      <div class='waitCustomerBox' id='waitCustomerBox0'> <!--id指排队的第几位客人-->
-        <div class='inline-Box-eating4'>
-          <div class='customer-shade'></div>
-        </div>
+<!--id指排队的第几位客人-->
+
+<!-- 放客人等待队列的地方,测试可用,勿删 -->
+      <!-- <div class='waitCustomerBox' id='waitCustomerBox0'>
         <div class='cookingBar'>
-          <div class='inline-Bar5'>
-            <div class='shade'>
-              <p class='wait'>等待中</p>
-            </div>
+          <div class='shade'>
+            <p class='wait'>等待中</p>
           </div>
         </div>
         <img class='customerImg' src='asset/customer1.png' alt='custmoer'>
-      </div>
-      <div class='waitCustomerBox' id='waitCustomerBox1'>
-        <div class='inline-Box-eating4'>
-          <div class='customer-shade'></div>
-        </div>
-        <div class='cookingBar'>
-          <div class='inline-Bar5'>
-            <div class='shade'>
-              <p class='wait'>等待中</p>
-            </div>
-          </div>
-        </div>
-        <img class='customerImg' src='asset/customer2.png' alt='custmoer'>
-      </div>
-      <div class='waitCustomerBox' id='waitCustomerBox2'>
-        <div class='inline-Box-eating4'>
-          <div class='customer-shade'></div>
-        </div>
-        <div class='cookingBar'>
-          <div class='inline-Bar5'>
-            <div class='shade'>
-              <p class='wait'>等待中</p>
-            </div>
-          </div>
-        </div>
-        <img class='customerImg' src='asset/customer3.png' alt='custmoer'>
-      </div>
-      <div class='waitCustomerBox' id='waitCustomerBox3'>
-        <div class='inline-Box-eating4'>
-          <div class='customer-shade'></div>
-        </div>
-        <div class='cookingBar'>
-          <div class='inline-Bar5'>
-            <div class='shade'>
-              <p class='wait'>等待中</p>
-            </div>
-          </div>
-        </div>
-        <img class='customerImg' src='asset/customer4.png' alt='custmoer'>
-      </div>
-      <div class='waitCustomerBox' id='waitCustomerBox4'>
-        <div class='inline-Box-eating4'>
-          <div class='customer-shade'></div>
-        </div>
-        <div class='cookingBar'>
-          <div class='inline-Bar5'>
-            <div class='shade'>
-              <p class='wait'>等待中</p>
-            </div>
-          </div>
-        </div>
-        <img class='customerImg' src='asset/customer5.png' alt='custmoer'>
-      </div>
-      <div class='waitCustomerBox' id='waitCustomerBox5'>
-        <div class='inline-Box-eating4'>
-          <div class='customer-shade'></div>
-        </div>
-        <div class='cookingBar'>
-          <div class='inline-Bar5'>
-            <div class='shade'>
-              <p class='wait'>等待中</p>
-            </div>
-          </div>
-        </div>
-        <img class='customerImg' src='asset/customer6.png' alt='custmoer'>
-      </div>
+      </div> -->
+
     </footer>
   </main>
   <!-- 开始游戏启动部分 -->
