顾客落座完成

--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
     <button>烧菜</button>
     <button>暂停</button>
     <button>继续</button>
+    <button>入座</button>
     <div class="chefPlace">
       <div class='small-inline-Box'><!--inline-Box-->
         <!-- 这个位置是放厨师的 -->
@@ -50,7 +51,9 @@
     <div class="consumerPlace">
       <div class="grid-container">
         <div class="grid-item">
-          <div class="seat"></div>
+          <div class="seat">
+            <!-- <img class="seatImg" src="/asset/customer2.png" /> -->
+          </div>
           <div class="orderdishes">
             <p class="orderdish">UI炖UI</p>
             <p class="orderdish">UI炖UI</p>
