顾客上桌点菜包括进度条

--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 </head>
 
 <body>
-  <div class="blackShadow"></div>
   <main id="main">
+    <div class="blackShadow"></div>
     <header>
       <div class="time">
         W1 D1
@@ -55,33 +55,81 @@
             <!-- <img class="seatImg" src="/asset/customer2.png" /> -->
           </div>
           <div class="orderdishes">
-            <p class="orderdish">UI炖UI</p>
-            <p class="orderdish">UI炖UI</p>
-            <p class="orderdish">UI炖UI</p>
+            <div class="Bar">
+              <div class="shade">
+                <p class="dish">1</p>
+              </div>
+            </div>
+            <div class="Bar">
+              <div class="shade">
+                <p class="dish">1</p>
+              </div>
+            </div>
+            <div class="Bar">
+              <div class="shade">
+                <p class="dish">1</p>
+              </div>
+            </div>
           </div>
         </div>
         <div class="grid-item">
           <div class="seat"></div>
           <div class="orderdishes">
-            <p class="orderdish">UI炖UI</p>
-            <p class="orderdish">UI炖UI</p>
-            <p class="orderdish">UI炖UI</p>
+            <div class="Bar">
+              <div class="shade">
+                <p class="dish">UI炖UI</p>
+              </div>
+            </div>
+            <div class="Bar">
+              <div class="shade">
+                <p class="dish">UI炖UI</p>
+              </div>
+            </div>
+            <div class="Bar">
+              <div class="shade">
+                <p class="dish">UI炖UI</p>
+              </div>
+            </div>
           </div>
         </div>
         <div class="grid-item">
           <div class="seat"></div>
           <div class="orderdishes">
-            <p class="orderdish">UI炖UI</p>
-            <p class="orderdish">UI炖UI</p>
-            <p class="orderdish">UI炖UI</p>
+            <div class="Bar">
+              <div class="shade">
+                <p class="dish">UI炖UI</p>
+              </div>
+            </div>
+            <div class="Bar">
+              <div class="shade">
+                <p class="dish">UI炖UI</p>
+              </div>
+            </div>
+            <div class="Bar">
+              <div class="shade">
+                <p class="dish">UI炖UI</p>
+              </div>
+            </div>
           </div>
         </div>
         <div class="grid-item">
           <div class="seat"></div>
-          <div class="orderdishes">
-            <p class="orderdish">UI炖UI</p>
-            <p class="orderdish">UI炖UI</p>
-            <p class="orderdish">UI炖UI</p>
+         <div class="orderdishes">
+            <div class="Bar">
+              <div class="shade">
+                <p class="dish">UI炖UI</p>
+              </div>
+            </div>
+            <div class="Bar">
+              <div class="shade">
+                <p class="dish">UI炖UI</p>
+              </div>
+            </div>
+            <div class="Bar">
+              <div class="shade">
+                <p class="dish">UI炖UI</p>
+              </div>
+            </div>
           </div>
         </div>
       </div>
@@ -126,11 +174,12 @@
         <div class='inline-Box-eating4' id='inline-customerBox1'>
           <div class='customer-shade'></div>
         </div>
-        <img class='customerImg' src='asset/customer1.png' alt='custmoer'>
+        <!-- <img class='customerImg' src='asset/customer2.png' alt='custmoer'> -->
+        <!-- 一个花里胡哨的功能,写了增加工作量 -->
       </div>
-      <p class='orderDishes'><span class='customerName'>QIAN</span>正在点菜，已点 <span class='totalPrice'></span> 元的菜
-      </p>
-      <div class='menu-border'>
+      <!-- <p class='orderDishes'><span class='customerName'>QIAN</span>正在点菜，已点 <span class='totalPrice'></span> 元的菜 -->
+      <!-- </p> -->
+      <!-- <div class='menu-border'>
         <div class='inline-border'>
           <p class='allDishes'>凉菜（二选一，可不点）</p>
           <p class='dishes'><input class='check' type="checkbox" id='coldDishe1'>凉拌SAN<span>...............￥
@@ -153,6 +202,19 @@
               5</span></p>
           <p class='dishes'><input class='check' type="checkbox" id='drink2'>小程序奶茶<span>...............￥
               6</span></p>
+        </div>
+      </div> -->
+      <div class='menu-border'>
+        <div class='inline-border'>
+          <p class='allDishes'>小菜(可不点)</p>
+          <p class='dishes'><input class='check' type="checkbox" id='smallDishe'>头孢<span>...............￥
+              12</span></p>
+          <p class='allDishes'>主菜（必点）</p>
+          <p class='dishes'><input class='check' type="checkbox" id='mainDishe'>炸鸡<span>...............￥
+              15</span></p>
+          <p class='allDishes'>饮品（可不点）</p>
+          <p class='dishes'><input class='check' type="checkbox" id='drink'>啤酒<span>...............￥
+              10</span></p>
         </div>
       </div>
       <div class='orderCompleteBorder'>
