--- a/index.html
+++ b/index.html
@@ -58,18 +58,21 @@
           <div class="orderdishes">
             <div class="Bar">
               <div class="shade">
-                <p class="dish">1</p>
+                <p class="dish" >1</p>
               </div>
+              <img class="dishOk"  src='asset/food.png' alt='菜做好了'>
             </div>
             <div class="Bar">
               <div class="shade">
                 <p class="dish">1</p>
               </div>
+              <img class="dishOk" src='asset/food.png' alt='菜做好了'>
             </div>
             <div class="Bar">
               <div class="shade">
                 <p class="dish">1</p>
               </div>
+              <img class="dishOk"  src='asset/food.png' alt='菜做好了'>
             </div>
           </div>
           <img class='checkout' data-index='1' src='asset/money.png' alt='结账'>
@@ -82,16 +85,19 @@
               <div class="shade">
                 <p class="dish">UI炖UI</p>
               </div>
+              <img class="dishOk"  src='asset/food.png' alt='菜做好了'>
             </div>
             <div class="Bar">
               <div class="shade">
                 <p class="dish">UI炖UI</p>
               </div>
+              <img class="dishOk"  src='asset/food.png' alt='菜做好了'>
             </div>
             <div class="Bar">
               <div class="shade">
                 <p class="dish">UI炖UI</p>
               </div>
+              <img class="dishOk"  src='asset/food.png' alt='菜做好了'>
             </div>
           </div>
           <img class='checkout' data-index='2' src='asset/money.png' alt='结账'>
@@ -104,16 +110,19 @@
               <div class="shade">
                 <p class="dish">UI炖UI</p>
               </div>
+              <img class="dishOk"  src='asset/food.png' alt='菜做好了'>
             </div>
             <div class="Bar">
               <div class="shade">
                 <p class="dish">UI炖UI</p>
               </div>
+              <img class="dishOk"  src='asset/food.png' alt='菜做好了'>
             </div>
             <div class="Bar">
               <div class="shade">
                 <p class="dish">UI炖UI</p>
               </div>
+              <img class="dishOk"  src='asset/food.png' alt='菜做好了'>
             </div>
           </div>
           <img class='checkout' data-index='3' src='asset/money.png' alt='结账'>
@@ -126,16 +135,19 @@
               <div class="shade">
                 <p class="dish">UI炖UI</p>
               </div>
+              <img class="dishOk"  src='asset/food.png' alt='菜做好了'>
             </div>
             <div class="Bar">
               <div class="shade">
                 <p class="dish">UI炖UI</p>
               </div>
+              <img class="dishOk"  src='asset/food.png' alt='菜做好了'>
             </div>
             <div class="Bar">
               <div class="shade">
                 <p class="dish">UI炖UI</p>
               </div>
+              <img class="dishOk"  src='asset/food.png' alt='菜做好了'>
             </div>
           </div>
           <img class='checkout' data-index='4' src='asset/money.png' alt='结账'>
