--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
 
       </div>
     </div>
+
     </div>
     <div class="consumerPlace">
       <div class="grid-container">
@@ -58,17 +59,20 @@
           <div class="orderdishes">
             <div class="Bar">
               <div class="shade">
-                <p class="dish">1</p>
+                <p class="dish">1
+                </p>
               </div>
             </div>
             <div class="Bar">
               <div class="shade">
-                <p class="dish">1</p>
+                <p class="dish">1
+                </p>
               </div>
             </div>
             <div class="Bar">
               <div class="shade">
-                <p class="dish">1</p>
+                <p class="dish">1
+                </p>
               </div>
             </div>
           </div>
@@ -121,7 +125,7 @@
         </div>
         <div class="grid-item">
           <div class="seat"></div>
-         <div class="orderdishes">
+          <div class="orderdishes">
             <div class="Bar">
               <div class="shade">
                 <p class="dish">UI炖UI</p>
