上菜流程基本完成

--- a/index.html
+++ b/index.html
@@ -17,7 +17,6 @@
         W<span class="weekNum">1</span> D<span class="dayNum">1</span>
       </div>
       <div class="cash">
-        穷光蛋
       </div>
     </header>
     <button>添加</button>
@@ -61,18 +60,21 @@
               <div class="shade">
                 <p class="dish">1
                 </p>
+                <img class="dishOk" src='asset/food.png' alt='菜做好了'>
               </div>
             </div>
             <div class="Bar">
               <div class="shade">
                 <p class="dish">1
                 </p>
+                <img class="dishOk" src='asset/food.png' alt='菜做好了'>
               </div>
             </div>
             <div class="Bar">
               <div class="shade">
                 <p class="dish">1
                 </p>
+                <img class="dishOk" src='asset/food.png' alt='菜做好了'>
               </div>
             </div>
           </div>
@@ -85,16 +87,19 @@
             <div class="Bar">
               <div class="shade">
                 <p class="dish">UI炖UI</p>
+                <img class="dishOk" src='asset/food.png' alt='菜做好了'>
               </div>
             </div>
             <div class="Bar">
               <div class="shade">
                 <p class="dish">UI炖UI</p>
+                <img class="dishOk" src='asset/food.png' alt='菜做好了'>
               </div>
             </div>
             <div class="Bar">
               <div class="shade">
                 <p class="dish">UI炖UI</p>
+                <img class="dishOk" src='asset/food.png' alt='菜做好了'>
               </div>
             </div>
           </div>
@@ -107,16 +112,19 @@
             <div class="Bar">
               <div class="shade">
                 <p class="dish">UI炖UI</p>
+                <img class="dishOk" src='asset/food.png' alt='菜做好了'>
               </div>
             </div>
             <div class="Bar">
               <div class="shade">
                 <p class="dish">UI炖UI</p>
+                <img class="dishOk" src='asset/food.png' alt='菜做好了'>
               </div>
             </div>
             <div class="Bar">
               <div class="shade">
                 <p class="dish">UI炖UI</p>
+                <img class="dishOk" src='asset/food.png' alt='菜做好了'>
               </div>
             </div>
           </div>
@@ -129,16 +137,19 @@
             <div class="Bar">
               <div class="shade">
                 <p class="dish">UI炖UI</p>
+                <img class="dishOk" src='asset/food.png' alt='菜做好了'>
               </div>
             </div>
             <div class="Bar">
               <div class="shade">
                 <p class="dish">UI炖UI</p>
+                <img class="dishOk" src='asset/food.png' alt='菜做好了'>
               </div>
             </div>
             <div class="Bar">
               <div class="shade">
                 <p class="dish">UI炖UI</p>
+                <img class="dishOk" src='asset/food.png' alt='菜做好了'>
               </div>
             </div>
           </div>
