--- a/index.html
+++ b/index.html
@@ -58,15 +58,9 @@
           <div class="orderdishes">
             <div class="Bar">
               <div class="shade">
-<<<<<<< HEAD
-                <p class="dish" >1</p>
-=======
-                <p class="dish">1
-                </p>
+                <p class="dish">1</p>
                 <img class="dishOk" src='asset/food.png' alt='菜做好了'>
->>>>>>> origin/CCH
               </div>
-              <img class="dishOk"  src='asset/food.png' alt='菜做好了'>
             </div>
             <div class="Bar">
               <div class="shade">
@@ -74,7 +68,6 @@
                 </p>
                 <img class="dishOk" src='asset/food.png' alt='菜做好了'>
               </div>
-              <img class="dishOk" src='asset/food.png' alt='菜做好了'>
             </div>
             <div class="Bar">
               <div class="shade">
@@ -82,7 +75,6 @@
                 </p>
                 <img class="dishOk" src='asset/food.png' alt='菜做好了'>
               </div>
-              <img class="dishOk"  src='asset/food.png' alt='菜做好了'>
             </div>
           </div>
           <img class='checkout' data-index='1' src='asset/money.png' alt='结账'>
@@ -96,21 +88,18 @@
                 <p class="dish">UI炖UI</p>
                 <img class="dishOk" src='asset/food.png' alt='菜做好了'>
               </div>
-              <img class="dishOk"  src='asset/food.png' alt='菜做好了'>
             </div>
             <div class="Bar">
               <div class="shade">
                 <p class="dish">UI炖UI</p>
                 <img class="dishOk" src='asset/food.png' alt='菜做好了'>
               </div>
-              <img class="dishOk"  src='asset/food.png' alt='菜做好了'>
             </div>
             <div class="Bar">
               <div class="shade">
                 <p class="dish">UI炖UI</p>
                 <img class="dishOk" src='asset/food.png' alt='菜做好了'>
               </div>
-              <img class="dishOk"  src='asset/food.png' alt='菜做好了'>
             </div>
           </div>
           <img class='checkout' data-index='2' src='asset/money.png' alt='结账'>
@@ -124,21 +113,18 @@
                 <p class="dish">UI炖UI</p>
                 <img class="dishOk" src='asset/food.png' alt='菜做好了'>
               </div>
-              <img class="dishOk"  src='asset/food.png' alt='菜做好了'>
             </div>
             <div class="Bar">
               <div class="shade">
                 <p class="dish">UI炖UI</p>
                 <img class="dishOk" src='asset/food.png' alt='菜做好了'>
               </div>
-              <img class="dishOk"  src='asset/food.png' alt='菜做好了'>
             </div>
             <div class="Bar">
               <div class="shade">
                 <p class="dish">UI炖UI</p>
                 <img class="dishOk" src='asset/food.png' alt='菜做好了'>
               </div>
-              <img class="dishOk"  src='asset/food.png' alt='菜做好了'>
             </div>
           </div>
           <img class='checkout' data-index='3' src='asset/money.png' alt='结账'>
@@ -152,21 +138,18 @@
                 <p class="dish">UI炖UI</p>
                 <img class="dishOk" src='asset/food.png' alt='菜做好了'>
               </div>
-              <img class="dishOk"  src='asset/food.png' alt='菜做好了'>
             </div>
             <div class="Bar">
               <div class="shade">
                 <p class="dish">UI炖UI</p>
                 <img class="dishOk" src='asset/food.png' alt='菜做好了'>
               </div>
-              <img class="dishOk"  src='asset/food.png' alt='菜做好了'>
             </div>
             <div class="Bar">
               <div class="shade">
                 <p class="dish">UI炖UI</p>
                 <img class="dishOk" src='asset/food.png' alt='菜做好了'>
               </div>
-              <img class="dishOk"  src='asset/food.png' alt='菜做好了'>
             </div>
           </div>
           <img class='checkout' data-index='4' src='asset/money.png' alt='结账'>
@@ -311,22 +294,19 @@
           <p>先不了</p>
         </button>
       </div>
-      <div class='moneyAlert'>
-        <p>你的金额已经不足支付解约金</p>
-      </div>
     </div>
   </section>
   <!-- 警告部分 -->
-  <div class='needAlert'>
-    <p>餐厅目前有空位，赶紧点击等位客人头像让客人入座点餐吧</p>
+  <div class='moneyAlert'>
+    <p>你的金额已经不足支付解约金</p>
   </div>
-  <div class='finishAlert'>
-    <p>QIAN完成点餐，等候用餐</p>
-    <p>疯狂点击厨师头像可以加速做菜</p>
+  <div class='finish'>
+    <p>GameOver</p>
   </div>
   <div class='chefAlert'>
     <p>招聘厨师成功！您已经有<span id='chefNumber'> 5 </span>名厨师</p>
   </div>
+  
   <script src="index.js"></script>
 </body>
 
